--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
 description = "A derive macro for enum discriminants"
 license = "MIT"
+repository = "https://github.com/andrewgazelka/derive-discriminant"
 
 [lib]
 proc-macro = true
